--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "pinia": "^2.1.6",
     "primeicons": "^6.0.1",
     "primevue": "^3.31.0",
